--- a/app/views/login.jade
+++ b/app/views/login.jade
@@ -9,7 +9,7 @@ block content
 		p.alert.alert-danger #{error}
 	-}
 
-	form(method='POST', action="/user/login")
+	form(method='POST', action="/login")
 		#form-group
 			label Email:
 			input.form-control(type='email', name="email", placeholder='Enter Email')
