cleanup routes and controllers.  added markdown gem

--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -1,9 +1,9 @@
 <% include header %>
 
 <h2>Welcome to Blocipedia</h2>
-<!--   <%if (typeof error != "undefined"){%>
+  <%if (typeof error != "undefined"){%>
     <p class="alert alert-danger"><%= error %></p>
-  <% } %> -->
+  <% } %>
   <div class="row">
     <div class="col-md-8">
       <form method="POST" action="/login">
