--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -23,6 +23,7 @@
                 <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
                 <li class="nav-item"><a class="nav-link" href="/signup">Sign Up</a></li>
               <% } else { %>
+                <li class="nav-item"><a class="nav-link" href="/profile">Edit Profile</a></li>
                 <li class="nav-item"><a class="nav-link" href="/signout">Sign out</a></li>
               <% } %>
             </ul>
