more code cleanups (controllers, routes, ejs)

--- a/app/views/wiki_all.ejs
+++ b/app/views/wiki_all.ejs
@@ -7,7 +7,7 @@
         <div class="media-body">
           <h4 class="media-heading">
             <p>
-            	<a href="#"><%= wikis[i].title %></a>
+            	<a href="wiki/<%= wikis[i].id %>"><%= wikis[i].title %></a>
             </p>
           </h4>
         </div>
