--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -12,7 +12,7 @@
 	<!-- Navigation -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#">Blocipedia</a>
+          <a class="navbar-brand" href="/">Blocipedia</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -20,11 +20,11 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a class="nav-link" href="/wikis">Wikis</a></li>
               <% if (typeof user == "undefined"){ %>
-                <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-                <li class="nav-item"><a class="nav-link" href="/signup">Sign Up</a></li>
+                <li class="nav-item"><a class="nav-link" href="/user/login">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="/user/signup">Sign Up</a></li>
               <% } else { %>
-                <li class="nav-item"><a class="nav-link" href="/profile">Edit Profile</a></li>
-                <li class="nav-item"><a class="nav-link" href="/signout">Sign out</a></li>
+                <li class="nav-item"><a class="nav-link" href="/user/profile">Edit Profile</a></li>
+                <li class="nav-item"><a class="nav-link" href="/user/logout">Sign out</a></li>
               <% } %>
             </ul>
           </div>
