--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -6,7 +6,7 @@
   <% } %>
   <div class="row">
     <div class="col-md-8">
-      <form method="POST" action="/login">
+      <form method="POST" action="/user/login">
   <div class="form-group">
     <label>Email:</label>
     <input type="email" name="email" placeholder="Enter Email" class="form-control"/>
