--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,4 +1,4 @@
-<% include header %>
+<% include partials/header.ejs %>
 
   	<main class="container">
   		<%if (typeof user != "undefined"){%>
@@ -15,4 +15,4 @@
         </header>
 	</main>
 
-<% include footer %>
+<% include partials/footer.ejs %>
