--- a/app/views/users/edit.ejs
+++ b/app/views/users/edit.ejs
@@ -1,4 +1,4 @@
-<% include header %>
+<% include ../partials/header.ejs %>
 
 <h2>Edit Profile</h2>
   <%if (typeof error != "undefined"){%>
@@ -6,7 +6,7 @@
   <% } %>
   <div class="row">
     <div class="col-md-8">
-      <form method="POST" action="/user/update">
+      <form method="POST" action="/users/update">
         <div class="form-group">
           <label>New Password:</label>
           <input type="password" name="password" placeholder="Enter password" class="form-control"/>
@@ -28,7 +28,7 @@
     <div class="row">
       <div class="col-md-8">
         <h2>Upgrade to a premium Blocipedia Account</h2>
-        <form method="POST" action="/user/upgrade">
+        <form method="POST" action="/users/upgrade">
           <script
             src="https://checkout.stripe.com/checkout.js" class="stripe-button"
             data-key="pk_test_674IBw3mQXeoOdvyfxgRv2Eg"
@@ -44,6 +44,6 @@
     </div>
   <% } %>
 
-<% include footer %>
+<% include ../partials/footer.ejs %>
 
 
