--- a/app/views/users/login.ejs
+++ b/app/views/users/login.ejs
@@ -1,4 +1,4 @@
-<% include header %>
+<% include ../partials/header.ejs %>
 
 <h2>Welcome to Blocipedia</h2>
   <%if (typeof error != "undefined"){%>
@@ -6,7 +6,7 @@
   <% } %>
   <div class="row">
     <div class="col-md-8">
-      <form method="POST" action="/user/login">
+      <form method="POST" action="/users/login">
   <div class="form-group">
     <label>Email:</label>
     <input type="email" name="email" placeholder="Enter Email" class="form-control"/>
@@ -20,4 +20,4 @@
     </div>
   </div>
 
-<% include footer %>
+<% include ../partials/footer.ejs %>
