--- a/app/views/users/signup.ejs
+++ b/app/views/users/signup.ejs
@@ -1,4 +1,4 @@
-<% include header %>
+<% include ../partials/header.ejs %>
 
 <h2>Welcome to Blocipedia</h2>
   <%if (typeof error != "undefined"){%>
@@ -6,7 +6,7 @@
   <% } %>
   <div class="row">
     <div class="col-md-8">
-      <form method="POST" action="/user/signup">
+      <form method="POST" action="/users/signup">
         <div class="form-group">
           <label>Name:</label>
           <input type="text" name="name" placeholder="Enter Name" class="form-control"/>
@@ -28,4 +28,4 @@
     </div>
   </div>
 
-<% include footer %>
+<% include ../partials/footer.ejs %>
