--- a/app/views/wikis/show.ejs
+++ b/app/views/wikis/show.ejs
@@ -1,4 +1,4 @@
-<% include header %>
+<% include ../partials/header.ejs %>
 <h1>All Wikis</h1>
 <div class="row">
   <div class="col-md-8">
@@ -7,7 +7,7 @@
         <div class="media-body">
           <h4 class="media-heading">
             <p>
-            	<a href="wiki/<%= wikis[i].id %>"><%= wikis[i].title %></a>
+            	<a href="wikis/<%= wikis[i].id %>"><%= wikis[i].title %></a>
             </p>
           </h4>
         </div>
@@ -18,4 +18,4 @@
     <a href="/wiki" class="btn btn-primary">New Wiki</a>
   </div>
 </div>
-<% include footer %>
+<% include ../partials/footer.ejs %>
