--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -9,8 +9,8 @@
           	<h1 class="display-3">Welcome to Blocipedia</h1>
           	<p class="lead">An application for users to create, collaborate, and share wikis.</p>
 		 	<%if (typeof user == "undefined"){%>
-		 		<a href="/user/signup" class="btn btn-primary">Sign up</a>
-	          	<a href="/user/login" class="btn btn-secondary">Login</a>
+		 		<a href="/users/signup" class="btn btn-primary">Sign up</a>
+	          	<a href="/users/login" class="btn btn-secondary">Login</a>
 			<% } %>
         </header>
 	</main>
