--- a/app/views/wikis/wiki.ejs
+++ b/app/views/wikis/wiki.ejs
@@ -1,5 +1,6 @@
 <% include ../partials/header.ejs %>
 <h1><%= wiki.title %></h1>
+<% include ../partials/messages.ejs %>
 <div class="row">
   <div class="col-md-8">
     <%- wiki.body %><br>
