--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a class="nav-link" href="/wikis">Wikis</a></li>
-              <% if (typeof user == "undefined"){ %>
+              <% if(!user) { %>
                 <li class="nav-item"><a class="nav-link" href="/users/login">Login</a></li>
                 <li class="nav-item"><a class="nav-link" href="/users/signup">Sign Up</a></li>
               <% } else { %>
