--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -10,24 +10,15 @@
 </head>
 <body>
 	<!-- Navigation -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-          <a class="navbar-brand" href="/">Blocipedia</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item"><a class="nav-link" href="/wikis">Wikis</a></li>
-              <% if(!user) { %>
-                <li class="nav-item"><a class="nav-link" href="/users/login">Login</a></li>
-                <li class="nav-item"><a class="nav-link" href="/users/signup">Sign Up</a></li>
-              <% } else { %>
-                <li class="nav-item"><a class="nav-link" href="/users/edit/<%= user.id %>"><%= user.name %></a></li>
-                <li class="nav-item"><a class="nav-link" href="/users/logout">Sign out</a></li>
-              <% } %>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      
+  <div class="container">
+    <ul class="nav nav-tabs">
+      <li><a class="nav-link" href="/">Home</a></li>
+      <li><a class="nav-link" href="/wikis">Wikis</a></li>
+      <% if(!user) { %>
+        <li><a class="nav-link" href="/users/login">Login</a></li>
+        <li><a class="nav-link" href="/users/signup">Sign Up</a></li>
+      <% } else { %>
+        <li><a class="nav-link" href="/users/logout">Sign out</a></li>
+      <% } %>
+    </ul>
+  </div>
