--- a/app/views/users/show.ejs
+++ b/app/views/users/show.ejs
@@ -1,5 +1,6 @@
 <% include ../partials/header.ejs %>
   <main class="container">
+    <% include ../partials/messages.ejs %>
     <h1><%= `${user.email}'s profile` %></h1>
     <hr>
     <h2> Wikis </h2>
