--- a/app/views/users/signup.ejs
+++ b/app/views/users/signup.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header.ejs %>
-
-<h2>Welcome to Blocipedia</h2>
+<main class="container">
+  <h2>Signup</h2>
   <% include ../partials/messages.ejs %>
   <div class="row">
     <div class="col-md-8">
@@ -25,5 +25,5 @@
       </form>
     </div>
   </div>
-
+</main>
 <% include ../partials/footer.ejs %>
