--- a/app/views/wikis/edit.ejs
+++ b/app/views/wikis/edit.ejs
@@ -13,14 +13,16 @@
 			      <label>Body</label>
 			      <textarea rows="4" name="body" placeholder="Enter wiki body" class="form-control"/><%= wiki.body %></textarea>
 			    </div>
-			    <% if (user.role == 2 || user.role == 1) {%>
+			    <% if (user.role == 2 || (user.role == 1 && wiki.UserId == user.id)) {%>
 			        <div class="form-group">
 			          	<label>Private</label>
-			          	<input type="checkbox" name="private" value="private"/>
+			          	<input type="checkbox" name="private" <%= wiki.private ? "checked" : "" %>/>
 			        </div>
 			    <% } %>
 			    <input type="submit" value="Save" class="btn btn-primary"/>
 			</form>
+			</br>
+			<% include ../collaborators/edit.ejs %>
 	  	</div>
 	</div>
 </main>
